update doc and jar, make some changes, and jar become v1.0